force-app/main/default/objects/Junction_User_Mentor_Home__c/Junction_User_Mentor_Home__c.object-meta.xml
<CustomObject>
    <label>Junction -(User, Mentor Home)</label>
    <nameField>
        <displayFormat>SMI-{000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junction -(Users, Mentor Home)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>