force-app/main/default/objects/Junction_User_Mentor_Home__c/fields/Assigned_Step__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Step</label>
    <referenceTo>Assigned_Step__c</referenceTo>
    <relationshipLabel>Junction -(Users, Mentor Home)</relationshipLabel>
    <relationshipName>Junction_Users_Mentor_Home</relationshipName>
    <type>Lookup</type>
</CustomField>