force-app/main/default/objects/Junction_User_Mentor_Home__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Junction_Users_Mentor_Home</relationshipName>
    <type>Lookup</type>
</CustomField>