force-app/main/default/objects/Junction_User_Mentor_Home__c/fields/Mentor_Home__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Home__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor Home</label>
    <referenceTo>Mentor_Home__c</referenceTo>
    <relationshipLabel>Junction -(Users, Mentor Home)</relationshipLabel>
    <relationshipName>Junction_Users_Mentor_Home</relationshipName>
    <type>Lookup</type>
</CustomField>